analyses/paper/connectivitycreation/myscript_ELModel_LeafTarget_ProjNorm_v713335536.err
Could not find conda environment: allen_env
You can list all discoverable environments with `conda info --envs`.

  File "ELModel_LeafTarget_ProjNorm_v7.py", line 1
    %load_ext autoreload
    ^
SyntaxError: invalid syntax
